add teachers - subject view

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -15,5 +15,6 @@
   <%= @teacher.title %>
 </p>
 
+<%= link_to 'Subjects', teacher_subjects_path(id: @teacher.id) %>
 <%= link_to 'Edit', edit_teacher_path(@teacher) %> |
 <%= link_to 'Back', teachers_path %>
