add subject participants view

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -5,5 +5,6 @@
   <%= @subject.title %>
 </p>
 
+<%= link_to 'Participants', subjects_participants_path(@subject) %>
 <%= link_to 'Edit', edit_subject_path(@subject) %> |
 <%= link_to 'Back', subjects_path %>
