--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,50 @@
 </head>
 <body>
 
-<%= yield %>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "SubjectManager", root_path, class: "navbar-brand" %>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <% if user_signed_in? %>
+        <ul class="nav navbar-nav">
+          <li class="<%= active_for(:teachers) %>"><%= link_to "Teachers", teachers_path %> </li>
+          <li class="<%= active_for(:students) %>"><%= link_to "Students", students_path %> </li>
+          <li class="<%= active_for(:subjects) %>"><%= link_to "Subjects", subjects_path %> </li>
+        </ul>
+      <% end %>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%= current_user.try(:email) %> <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li> <%= link_to "Log out", destroy_user_session_path, method: :delete %> </li>
+            </ul>
+          </li>
+        <% else %>
+          <li> <%= link_to "Log in", new_user_session_path %> </li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+  <% if notice %>
+    <div class="alert alert-info" id="notice" role="alert"><p class="text-center"><%= notice %></p></div>
+  <% end %>
+  <%= yield %>
+</div>
 </body>
 </html>
