--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,10 +1,26 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Subject -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @subject.title %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @subject.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:teacher_id) %>:</strong></dt>
+  <dd><%= @subject.teacher_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:teachers_id) %>:</strong></dt>
+  <dd><%= @subject.teachers_id %></dd>
+</dl>
 
-<%= link_to 'Participants', subjects_participants_path(@subject) %>
-<%= link_to 'Edit', edit_subject_path(@subject) %> |
-<%= link_to 'Back', subjects_path %>
+<%= link_to "Participants",
+              subjects_participants_path(id: @subject.id), :class => 'btn btn-default'  %>
+
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              subjects_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_subject_path(@subject), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              subject_path(@subject),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
