--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -23,18 +23,11 @@
     <%=f.error_span(:title) %>
   </div>
   <div class="form-group">
-    <%= f.label :teacher_id, :class => 'control-label col-lg-2' %>
+    <%= f.label :teacher, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :teacher_id, :class => 'form-control' %>
+      <%= f.collection_select(:teacher_id, Teacher.all, :id, :full_name, {prompt: "Select Teacher"}, {class: "form-control"}) %>
     </div>
     <%=f.error_span(:teacher_id) %>
-  </div>
-  <div class="form-group">
-    <%= f.label :teachers_id, :class => 'control-label col-lg-2' %>
-    <div class="col-lg-10">
-      <%= f.text_field :teachers_id, :class => 'form-control' %>
-    </div>
-    <%=f.error_span(:teachers_id) %>
   </div>
 
   <div class="form-group">
