--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -6,10 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @subject.title %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:teacher_id) %>:</strong></dt>
-  <dd><%= @subject.teacher_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:teachers_id) %>:</strong></dt>
-  <dd><%= @subject.teachers_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:teacher) %>:</strong></dt>
+  <dd><%= @subject.teacher.try(:full_name) %></dd>
 </dl>
 
 <%= link_to "Participants",
