--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:teacher_id) %></th>
+      <th><%= model_class.human_attribute_name(:teacher) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= link_to subject.id, subject_path(subject) %></td>
         <td><%= subject.title %></td>
-        <td><%= subject.teacher_id %></td>
+        <td><%= subject.teacher.try(:full_name) %></td>
         <td><%=l subject.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
