--- a/app/views/teachers/subjects.html.erb
+++ b/app/views/teachers/subjects.html.erb
@@ -1,20 +1,36 @@
-<h1>Listing Teacher's Subjects</h1>
+<%- model_class = Subject -%>
 
-<table>
+<h1>Teacher's Subjects</h1>
+
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:teacher) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
 
   <tbody>
     <% @teacher.subjects.each do |subject| %>
       <tr>
-        <td><%= subject.title %></td>
-        <td><%= link_to 'Show', subject %></td>
-        <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
-        <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <tr>
+          <td><%= link_to subject.id, subject_path(subject) %></td>
+          <td><%= subject.title %></td>
+          <td><%= subject.teacher.try(:full_name) %></td>
+          <td><%=l subject.created_at %></td>
+          <td>
+            <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                        edit_subject_path(subject), :class => 'btn btn-default btn-xs' %>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                        subject_path(subject),
+                        :method => :delete,
+                        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :class => 'btn btn-xs btn-danger' %>
+          </td>
+        </tr>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Subject', new_subject_path(teacher_id: @teacher.id) %>
+<%= link_to 'New Subject', new_subject_path(teacher_id: @teacher.id), :class => 'btn btn-default' %>
