add participant logc views and spec

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -13,6 +13,9 @@
 <%= link_to "Participants",
               subjects_participants_path(id: @subject.id), :class => 'btn btn-default'  %>
 
+<%= link_to "Assign new participant",
+              new_subjects_participant_path(id: @subject.id), class: 'btn btn-primary' %>
+
 <%= link_to t('.back', :default => t("helpers.links.back")),
               subjects_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
