--- a/app/views/subjects/participants.html.erb
+++ b/app/views/subjects/participants.html.erb
@@ -19,6 +19,13 @@
       <td><%= student.first_name %></td>
       <td><%= student.last_name %></td>
       <td><%=l student.created_at %></td>
+      <td>
+        <%= link_to "Unassign",
+                    unassing_participant_from_subject_path(id: @subject.id, participant_id: student.id ),
+                    :method => :delete,
+                    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                    :class => 'btn btn-xs btn-danger' %>
+      </td>
     </tr>
     <% end %>
   </tbody>
